# dummy-python-package

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/dummy-python-package/: __init__.py
