[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 

[project]
name = "dummy-python-package" 
version = "0.0.1"
description = "An empty python package to make your CD/CI pipeline happy if it isn't when no dependencies are found."
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
